--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1.ts"
+      "src": "/api",
+      "dest": "/api/index.ts"
     }
   ]
 }
