--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
 {
   "builds": [
-    {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api",
-      "dest": "/api/index.ts"
-    }
+    { "src": "api/**/*.ts", "use": "@vercel/node" }
   ]
 }
