--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
-{
-  "builds": [
-    { "src": "api/**/*.ts", "use": "@vercel/node" }
-  ]
-}
+  {
+    "version": 2,
+    "builds": [
+      {
+        "src": "api/index.ts",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "api/index.ts"
+      }
+    ]
+  }
